objects/Oppty20_Reports__c.object
<CustomObject>
    <fields>
        <fullName>Country_Field_Id__c</fullName>
        <description>User_Country__c field Id in the User object.</description>
        <inlineHelpText>User_Country__c field Id in the User object.</inlineHelpText>
        <label>Country Field Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Field_Id__c</fullName>
        <description>Region__c field Id in the User object.</description>
        <inlineHelpText>Region__c field Id in the User object.</inlineHelpText>
        <label>Region Field Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <description>Id of the Salesforce report.</description>
        <inlineHelpText>Id of the Salesforce report.</inlineHelpText>
        <label>Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Field_Id__c</fullName>
        <description>Division__c field Id in the User object.</description>
        <inlineHelpText>Division__c field Id in the User object.</inlineHelpText>
        <label>Segment Field Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>